// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`finders  1`] = `
Array [
  undefined,
  Object {
    "author": "https://api.bitbucket.org/2.0/users/ppetrowski",
    "date": "2017-02-27T15:31:22.497552+00:00",
    "pullRequestURL": "https://api.bitbucket.org/2.0/repositories/atlassian/atlassian-oauth/pullrequests/34",
    "type": "author",
  },
  Array [
    Object {
      "author": "https://api.bitbucket.org/2.0/users/lpater",
      "date": "2017-03-07T15:11:57.673660+00:00",
      "pullRequestURL": "https://api.bitbucket.org/2.0/repositories/atlassian/atlassian-oauth/pullrequests/34",
      "type": "participant",
    },
  ],
  Array [
    Object {
      "author": "https://api.bitbucket.org/2.0/users/mmakowskii",
      "date": "2017-02-28T07:14:07.634137+00:00",
      "pullRequestURL": "https://api.bitbucket.org/2.0/repositories/atlassian/atlassian-oauth/pullrequests/34",
      "type": "participant",
    },
  ],
]
`;

exports[`finders findApprovers should get approvers 1`] = `
Array [
  Array [
    Object {
      "author": "https://api.bitbucket.org/2.0/users/lpater",
      "date": "2017-03-07T15:11:57.673660+00:00",
      "pullRequestURL": "https://api.bitbucket.org/2.0/repositories/atlassian/atlassian-oauth/pullrequests/34",
      "type": "participant",
    },
  ],
  Array [
    Object {
      "author": "https://api.bitbucket.org/2.0/users/mmakowskii",
      "date": "2017-02-28T07:14:07.634137+00:00",
      "pullRequestURL": "https://api.bitbucket.org/2.0/repositories/atlassian/atlassian-oauth/pullrequests/34",
      "type": "participant",
    },
  ],
]
`;

exports[`finders findAuthor should get author 1`] = `
Array [
  undefined,
  Object {
    "author": "https://api.bitbucket.org/2.0/users/ppetrowski",
    "date": "2017-02-27T15:31:22.497552+00:00",
    "pullRequestURL": "https://api.bitbucket.org/2.0/repositories/atlassian/atlassian-oauth/pullrequests/34",
    "type": "author",
  },
]
`;
